Wed Jan 11 18:43:50 UTC 2012  Martin Corino  <mcorino@remedy.nl>

        * ace/config-win32-mingw.h:
          Fixed typo.

Wed Jan 11 15:41:00 UTC 2012  Simon Massey  <simon dot massey at prismtech dot com>

        * ace/config-sunos5.10.h:
        Is supposed to define ACE_SIZE_T_FORMAT_SPECIFIER_ASCII and ACE_SSIZE_T_FORMAT_SPECIFIER_ASCII
        correctly for this platform. The old logic was "If already defined - redefine, but if not
        defined don't define" and wrong. The point of providing the definition of these SIZE_T format
        specifiers is to provide them if they are not set.

Wed Jan 11 14:36:43 UTC 2012  Martin Corino  <mcorino@remedy.nl>

        * ace/config-win32-mingw.h:
        * ace/os_include/os_signal.h:
          Changes to support MinGW64 compiler.

Mon Jan  9 11:07:54 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Netlink_Addr.h:
        * ace/Notification_Queue.h:
          Doxygen fixes

        * tests/run_test.lst:
          Removed several old config labels

Fri Jan  6 11:16:03 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * html/Stats/configuration.shtml:
        * html/Stats/index.shtml:
        * html/Stats/simple_footprint.shtml:
          Extended data to be shown and updated links

Fri Jan  6 10:28:35 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Stream.cpp:
          Fixed coverity errors

Wed Jan  4 13:02:12 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_compile_stats.sh:
          Added link for DAnCE

Wed Jan  4 11:45:43 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * html/Stats/index.shtml:
          Fixed link

Wed Jan  4 11:42:13 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_compile_stats.sh:
          Work with flat layout and added DAnCE

Wed Jan  4 11:06:50 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_compile_stats.sh: