@@ -271,6 +271,7 @@
 #define ACE_LACKS_SEMBUF_T
 #define ACE_LACKS_SIGACTION
 #define ACE_LACKS_SIGSET
+#define ACE_LACKS_SIGSET_T
 #define ACE_LACKS_SOCKETPAIR
 #define ACE_LACKS_SUSECONDS_T
 #define ACE_LACKS_USECONDS_T
